# HackathonWics

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  app.py  requirements.txt
backend/app/: main.py
frontend/: index.html  package.json  vite.config.ts
frontend/public/: coinsfalling3.glb
frontend/src/: App.tsx  DashBoard.tsx  FrontPage.tsx  GAME_SERVER.ts  Hero3DModel.tsx  ItemView.tsx  Navbar.tsx  NewGroupForm.tsx  SignIn.tsx  UploadAndSave.ts  UserProfile.tsx  configuration.ts  globals.css  updateUserItems.tsx
frontend/src/auth/: context.tsx  emailPasswordLogin.ts  emailPasswordRegistration.ts  googleLogin.ts  logout.ts
frontend/src/components/ui/: Squares.tsx  progress.tsx  tags-input.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/snake/: ServerMessage.ts  SnakeGame.tsx
multiplayer/: Cargo.toml  config.toml
multiplayer/src/: games_server.rs  main.rs  management_server.rs  run_server.rs
multiplayer/src/games_server/: all_games_state.rs  client_connection.rs  client_message.rs  game_runner.rs  overlap_detector.rs  power_up_cost_loader.rs  power_ups.rs  server_message.rs
multiplayer/src/games_server/all_games_state/: game_state.rs
multiplayer/src/management_server/: ManagementIncomingMessage.rs  ManagementOutgoingMessage.rs  create_game.rs
