[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1.44", features = ["full"] }
uuid = { version = "1.16", features = ["v4"] }
bytes = "1.10"
futures = "0.3"
rand = "0.9.0"